1. 支持7.0以上ROM的播放录音。不能直接用file:///的uri了；2. 彻底解决点开后白屏，设置透明却又有bug（切换app或者切换到后台时，会闪一下）的问题：解法是：设置window的背景为闪屏内容，by the way，window背景设置为图片后，其他view的背景就不能设置为windowBackground，因为这不是color，是图片。

--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -47,7 +47,7 @@
         android:layout_width="match_parent"
         android:id="@+id/drawerLayout"
         android:layout_weight="0.5"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/pageBackground"
         >
 
         <!-- The rest of your content view -->
@@ -70,7 +70,7 @@
             app:itemIconTint="@color/menu_text_color"
             app:menu="@menu/menu_drawer"
             android:layout_marginTop="0dp"
-            android:background="?android:attr/windowBackground"
+            android:background="@color/pageBackground"
             />
 
     </android.support.v4.widget.DrawerLayout>
