--- a/app/src/main/res/layout/layout_tabs.xml
+++ b/app/src/main/res/layout/layout_tabs.xml
@@ -12,14 +12,14 @@
         android:background="?attr/colorPrimary"
         app:tabMode="scrollable"
         app:tabGravity="fill"
-        app:tabTextColor="@color/windowBackground"
-        app:tabSelectedTextColor="@color/windowBackground"
+        app:tabTextColor="@color/pageBackground"
+        app:tabSelectedTextColor="@color/pageBackground"
         app:tabIndicatorColor="?attr/colorTabUnderline" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/pageBackground"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"  />
 </LinearLayout>
