--- a/app/src/main/res/layout/list_item_station.xml
+++ b/app/src/main/res/layout/list_item_station.xml
@@ -41,7 +41,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginStart="5dp"
-                    android:tint="?android:attr/windowBackground"
+                    android:tint="@color/colorPlayerBackground"
                     app:srcCompat="@drawable/ic_transparent_circle"
                     android:visibility="gone"/>
 
