--- a/app/src/main/res/layout/layout_splash.xml
+++ b/app/src/main/res/layout/layout_splash.xml
@@ -4,17 +4,16 @@
 <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
-    android:gravity="center"
+        android:gravity="center"
         xmlns:android="http://schemas.android.com/apk/res/android">
-    <ImageView
-        android:id="@+id/splashImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="100dp"
-        android:src="@drawable/splash">
-    </ImageView>
+    <!--<ImageView-->
+        <!--android:id="@+id/splashImageView"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:adjustViewBounds="true"-->
+        <!--android:scaleType="fitXY"-->
+        <!--android:src="@drawable/splash">-->
+    <!--</ImageView>-->
 </LinearLayout>
